# compiler-bot

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  ConnListener.cpp  README.md  bot.cpp  main.cpp  makefile  setup_linux.sh  setup_mac.sh
include/: rapidjson  restclient-cpp
src/: BotStringElement.cpp  BotStringElement.h  BotStringType.cpp  BotStringType.h  CompileOutput.cpp  CompileOutput.h  DrawersBotString.cpp  DrawersBotString.h  OutputBody.h  bot.cpp  bot.h  builder.cpp  builder.h  cloudinary.cpp  cloudinary.h  compileTask.cpp  compileTask.h  connListener.cpp  connListener.h  jsonExtension.cpp  jsonExtension.h  main.cpp  param.cpp  param.h
